# Crossy-Road

./: .gitignore  Doxyfile  README.md  README.txt  build.bat  build.sh
atb/: window.yaml
atb/block/: road.yaml
atb/button/: credit.yaml  easy_difficulty.yaml  easy_score.yaml  edit.yaml  exit.yaml  hard_difficulty.yaml  hard_score.yaml  highscore.yaml  home.yaml  insane_difficulty.yaml  insane_score.yaml  loadgame.yaml  menu.yaml  music.yaml  newgame.yaml  nightmare_difficulty.yaml  nightmare_score.yaml  no_music.yaml  no_sfx.yaml  normal_difficulty.yaml  normal_score.yaml  pause.yaml  resume.yaml  saveNexit.yaml  setting.yaml  sfx.yaml  submit.yaml  test.yaml
atb/chunk/: Background.yaml  autumnland.yaml  autumnpath.yaml  deadland.yaml  grass.yaml  path.yaml  railway.yaml  river.yaml  summerland.yaml  test.yaml  test2.yaml  winterland.yaml  winterpath.yaml
atb/container/: main.yaml  test.yaml
atb/entity/: main.yaml
atb/inputbox/: inputbox.yaml
atb/interface/: credit.yaml  difficultylevel.yaml  easy.yaml  game.yaml  gameover.yaml  hard.yaml  highscore.yaml  highscoreeasy.yaml  highscorehard.yaml  highscoreinsane.yaml  highscorenightmare.yaml  highscorenormal.yaml  home.yaml  insane.yaml  nightmare.yaml  normal.yaml  pause.yaml  setting.yaml  start.yaml  test.yaml
atb/map/: road.yaml
atb/object/: cow.yaml  ghost.yaml  test.yaml  testQ.yaml
atb/window/: window.yaml
docs/: Button.md  Container.md  game.md  interface.md
docs/html/: _r_e_a_d_m_e_8md.html  _u_i_8cpp.html  _u_i_8cpp_source.html  acting_8cpp.html  acting_8cpp_source.html  action_2include_2request_8hpp.html  action_2include_2request_8hpp.js  action_2include_2request_8hpp_source.html  action_2src_2action_8cpp.html  action_2src_2action_8cpp.js  action_2src_2action_8cpp_source.html  action_2src_2request_8cpp.html  action_2src_2request_8cpp_source.html  action_8hpp.html  action_8hpp.js  action_8hpp_source.html  addscore_8cpp.html  addscore_8cpp_source.html  annotated.html  annotated_dup.js  args_8cpp.html  args_8cpp_source.html  assets_8hpp.html  assets_8hpp.js  assets_8hpp_source.html  atb_8hpp.html  atb_8hpp.js  atb_8hpp_source.html  button_2src_2arthmetic_8cpp.html  button_2src_2arthmetic_8cpp_source.html  button_2src_2constructor_8cpp.html  button_2src_2constructor_8cpp_source.html  button_2src_2destructor_8cpp.html  button_2src_2destructor_8cpp_source.html  button_8hpp.html  button_8hpp.js  button_8hpp_source.html  changeinf_8cpp.html  changeinf_8cpp_source.html  changesprite_8cpp.html  (+461 more)
docs/latex/: Makefile  _u_i_8cpp.tex  _u_i_8cpp_source.tex  acting_8cpp.tex  acting_8cpp_source.tex  action_2include_2request_8hpp.tex  action_8hpp.tex  (+310 more)
src/: CMakeLists.txt  main.cpp
src/action/: CMakeLists.txt
src/action/include/: action.hpp  request.hpp
src/action/src/: action.cpp  args.cpp  arthmetic.cpp  request.cpp
src/action/src/request/: changeinf.cpp  lose.cpp
src/button/: CMakeLists.txt
src/button/include/: button.hpp
src/button/src/: arthmetic.cpp  constructor.cpp  destructor.cpp
src/button/src/action/: changeinf.cpp  default.cpp  hover.cpp  isClicked.cpp  isPressing.cpp
src/chunk/: CMakeLists.txt
src/chunk/include/: chunk.hpp
src/chunk/src/: action.cpp  arthmetic.cpp  constructor.cpp  destructor.cpp
src/chunk/src/action/: moveentity.cpp  switchlight.cpp
src/container/: CMakeLists.txt
src/container/include/: container.hpp
src/container/src/: arthmetic.cpp  constructor.cpp  destructor.cpp  overlap.cpp
src/container/src/action/: changesprite.cpp
src/dependency/raylib/: CMakeLists.txt
src/dependency/yamlcpp/: CMakeLists.txt
src/dependency/yamlcpp/yamlcpp/yamlcpp-build/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/dependency/yamlcpp/yamlcpp/yamlcpp-build/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
src/dependency/yamlcpp/yamlcpp/yamlcpp-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/dependency/yamlcpp/yamlcpp/yamlcpp-subbuild/yamlcpp-populate-prefix/src/yamlcpp-populate-stamp/: download-yamlcpp-populate.cmake  extract-yamlcpp-populate.cmake  yamlcpp-populate-urlinfo.txt
src/dependency/yamlcpp/yamlcpp/yamlcpp-subbuild/yamlcpp-populate-prefix/tmp/: yamlcpp-populate-mkdirs.cmake
src/entity/: CMakeLists.txt
src/frame/: CMakeLists.txt
src/frame/include/: frame.hpp
src/frame/src/: arthmetic.cpp  constructor.cpp  destructor.cpp  family.cpp
src/game/: CMakeLists.txt
src/game/include/: game.hpp
src/game/src/: action.cpp  arthmetic.cpp  constructor.cpp  destructor.cpp
src/game/src/action/: addscore.cpp  dying.cpp  movechunk.cpp  savegamerequest.cpp  startinit.cpp
src/inputbox/: CMakeLists.txt
src/inputbox/include/: inputbox.hpp
src/inputbox/src/: arthmetic.cpp  constructor.cpp  destructor.cpp
src/inputbox/src/action/: setactivate.cpp  setrawtext.cpp
src/interface/: CMakeLists.txt
src/interface/include/: interface.hpp
src/interface/src/: action.cpp  arthmetic.cpp  constructor.cpp  destructor.cpp
src/interface/src/action/: moveobject.cpp  movetoobject.cpp
src/object/: CMakeLists.txt
src/object/include/: object.hpp
src/object/src/: arthmetic.cpp  constructor.cpp  destructor.cpp  visible.cpp
src/storage/: CMakeLists.txt
src/storage/include/: storage_raw.hpp
src/storage/src/: arthmetic.cpp  constructor.cpp  destructor.cpp
src/utils/: CMakeLists.txt
src/utils/include/: countdown.hpp  file.hpp  keystroke.hpp  random.hpp  vector.hpp
src/utils/include/const/: datatype.hpp  request.hpp
src/utils/include/const/path/: assets.hpp  atb.hpp
src/utils/src/: constant.cpp  countdown.cpp  file.cpp  keystroke.cpp  random.cpp  vector.cpp
src/visual/: CMakeLists.txt
src/visual/include/: visual.hpp
src/visual/src/: arthmetic.cpp  constructor.cpp  destructor.cpp
src/window/: CMakeLists.txt
src/window/include/: window.h  window.hpp
src/window/src/: UI.cpp  acting.cpp  constructor.cpp  destructor.cpp  interface.cpp  musiccontroller.cpp  running.cpp  wincontent.cpp
src/window/src/action/: close.cpp  resize.cpp
(+211 files in other folders)
